--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,5 +1,7 @@
 footer {
   background-color: var(--black);
+  width: 100%;
+  max-width: 1248px;
   border-radius: 42px 42px 0px 0px;
   display: flex;
   flex-direction: column;
