Adding a some pages and redux

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --medium-brown: #544439;
   --light-brown: #4d270c;
   --light-gray: #e3e1dc;
+  --gray: #e0e0e0;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
