--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,16 @@
 header {
   width: 100%;
   max-width: 1248px;
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &:visited {
+      color: unset;
+    }
+  }
 }
