--- a/src/pages/CatDetails/CatDetails.scss
+++ b/src/pages/CatDetails/CatDetails.scss
@@ -1,10 +1,22 @@
 .cat-details-container {
   width: 100%;
+  margin-bottom: 5rem;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+
   .cat-details {
+    h1 {
+      margin-bottom: 1.625rem;
+    }
     p {
       font-weight: 500;
       margin-bottom: 2rem;
     }
+  }
+
+  @media screen and (min-width: 992px) {
+    flex-direction: row;
   }
 }
 
@@ -13,13 +25,7 @@
 
   h2 {
     margin-bottom: 2.5rem;
-    font-weight: 600;
-    font-size: 1.75rem;
     text-align: left;
-
-    @media screen and (min-width: 768px) {
-      font-size: 2.25rem;
-    }
   }
 }
 
@@ -27,6 +33,7 @@
   font-size: 0.75rem;
   font-weight: 700;
   color: var(--black);
+  flex: 1;
 
   @media screen and (min-width: 768px) {
     font-size: 1rem;
