--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -1,10 +1,65 @@
+main {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.home-container {
+  width: 100%;
+  max-width: 1250px;
+  margin-bottom: 1.5rem;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 6.25rem;
+  }
+}
+
 .home-card-container {
   background-color: var(--light-gray);
   border-radius: 24px;
+  min-height: 520px;
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 4rem;
+
+  .card-header-container {
+    border-radius: 24px 24px 0 0;
+    color: var(--light-gray);
+
+    .card-header-content {
+      position: absolute;
+      padding: 1.375rem 1.875rem;
+      z-index: 5;
+    }
+
+    svg {
+      height: 2rem;
+      margin-bottom: 0.4375rem;
+
+      @media screen and (min-width: 992px) {
+        height: 5.3125rem;
+      }
+    }
+
+    p {
+      font-size: 0.625rem;
+      max-width: 375px;
+
+      @media screen and (min-width: 768px) {
+        font-size: 1.5rem;
+      }
+    }
+
+    img {
+      width: 100%;
+      border-radius: 24px 24px 0 0;
+      position: relative;
+    }
+  }
 
   .card-body-container {
     padding: 1.125rem 1.75rem 3.375rem 1.75rem;
-
+    flex: 1;
     .card-body-title {
       margin-bottom: 1.625rem;
     }
@@ -15,31 +70,100 @@
   display: flex;
   flex-direction: column;
 
-  .home-introduction-title {
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: var(--almost-black);
-    margin-bottom: 2.625rem;
-  }
-
-  .home-introduction-p {
-    margin-bottom: 1.625rem;
-  }
-
-  a {
+  .home-introduction {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    max-width: 450px;
     margin-bottom: 4rem;
+
+    .home-introduction-title {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: var(--almost-black);
+      margin-bottom: 2.625rem;
+
+      @media screen and (min-width: 992px) {
+        font-size: 3rem;
+      }
+    }
+
+    .home-introduction-p {
+      margin-bottom: 1.625rem;
+    }
+
+    a {
+      margin-bottom: 4rem;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-size: 0.75rem;
+
+      &:visited {
+        color: unset;
+      }
+    }
+
+    @media screen and (min-width: 992px) {
+      margin-bottom: 0;
+
+      justify-content: center;
+    }
+  }
+
+  @media screen and (min-width: 992px) {
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: center;
   }
 }
 
 .introduction-decoration-container {
   display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  max-width: 540px;
 
   .decoration-set {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1rem;
+  }
+
+  .deco-1 {
+    width: 170px;
+
+    @media screen and (min-width: 992px) {
+      width: 270px;
+    }
+  }
+
+  .deco-2 {
+    width: 120px;
+
+    @media screen and (min-width: 992px) {
+      width: 195px;
+    }
+  }
+
+  .deco-3 {
+    width: 150px;
+
+    @media screen and (min-width: 992px) {
+      width: 240px;
+    }
   }
 
   .decoration-image {
-    flex: 1;
     border-radius: 24px;
   }
+}
+
+.deco-div {
+  width: 50px;
+  height: 3px;
+  background-color: var(--light-brown);
+  border-radius: 76px;
+  margin-bottom: 1rem;
 }
