--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -19,22 +19,35 @@ main {
   min-height: 520px;
   display: flex;
   flex-direction: column;
-
   margin-bottom: 4rem;
 
   .card-header-container {
     border-radius: 24px 24px 0 0;
     color: var(--light-gray);
+    position: relative;
 
     .card-header-content {
       position: absolute;
       padding: 1.375rem 1.875rem;
+
       z-index: 5;
+
+      @media screen and (min-width: 768px) {
+        padding: 4.25rem 4.875rem;
+      }
+
+      @media screen and (min-width: 992px) {
+        padding: 7.25rem 6.875rem;
+      }
     }
 
     svg {
       height: 2rem;
       margin-bottom: 0.4375rem;
+
+      @media screen and (min-width: 768px) {
+        height: 3.3125rem;
+      }
 
       @media screen and (min-width: 992px) {
         height: 5.3125rem;
@@ -44,8 +57,13 @@ main {
     p {
       font-size: 0.625rem;
       max-width: 375px;
+      margin-bottom: 1.125rem;
 
       @media screen and (min-width: 768px) {
+        font-size: 1rem;
+      }
+
+      @media screen and (min-width: 992px) {
         font-size: 1.5rem;
       }
     }
@@ -60,9 +78,36 @@ main {
   .card-body-container {
     padding: 1.125rem 1.75rem 3.375rem 1.75rem;
     flex: 1;
+
     .card-body-title {
+      font-size: 1.125rem;
       margin-bottom: 1.625rem;
+      font-weight: 700;
+      color: var(--almost-black);
+
+      @media screen and (min-width: 768px) {
+        font-size: 2rem;
+        margin-bottom: 2.225rem;
+      }
+
+      @media screen and (min-width: 992px) {
+        font-size: 3rem;
+        margin-bottom: 2.875rem;
+      }
     }
+
+    p {
+      margin-bottom: 0.375rem;
+      font-size: 0.75rem;
+
+      @media screen and (min-width: 768px) {
+        font-size: 1.125rem;
+      }
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 6.25rem;
   }
 }
 
@@ -166,4 +211,24 @@ main {
   background-color: var(--light-brown);
   border-radius: 76px;
   margin-bottom: 1rem;
+}
+
+.breeds-examples-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  gap: 18px 14px;
+
+  .example-images {
+    justify-self: center;
+    width: 250px;
+    img {
+      object-fit: cover;
+      height: 250px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    gap: 36px;
+  }
 }
