--- a/src/pages/Homepage/Homepage.scss
+++ b/src/pages/Homepage/Homepage.scss
@@ -25,12 +25,12 @@ main {
     border-radius: 24px 24px 0 0;
     color: var(--light-gray);
     position: relative;
+    min-height: 150px;
 
     .card-header-content {
       position: absolute;
       padding: 1.375rem 1.875rem;
-
-      z-index: 5;
+      z-index: 2;
 
       @media screen and (min-width: 768px) {
         padding: 4.25rem 4.875rem;
@@ -69,9 +69,11 @@ main {
     }
 
     img {
-      width: 100%;
       border-radius: 24px 24px 0 0;
       position: relative;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
     }
   }
 
@@ -79,19 +81,48 @@ main {
     padding: 1.125rem 1.75rem 3.375rem 1.75rem;
     flex: 1;
 
-    .card-body-title {
-      font-size: 1.125rem;
+    .card-body-title-container {
+      display: flex;
+      height: fit-content;
+      align-items: flex-end;
+      justify-content: space-between;
       margin-bottom: 1.625rem;
-      font-weight: 700;
-      color: var(--almost-black);
 
+      .card-body-title {
+        font-size: 1.125rem;
+
+        font-weight: 700;
+        color: var(--almost-black);
+
+        @media screen and (min-width: 768px) {
+          font-size: 2rem;
+        }
+
+        @media screen and (min-width: 992px) {
+          font-size: 3rem;
+        }
+      }
+
+      a {
+        text-decoration: none;
+        text-transform: uppercase;
+        color: var(--dark-brown);
+        font-size: 1.125rem;
+        transition: all 0.3s ease;
+        &:visited {
+          color: unset;
+        }
+
+        &:hover {
+          transform: scale(0.9);
+          opacity: 0.8;
+        }
+      }
       @media screen and (min-width: 768px) {
-        font-size: 2rem;
         margin-bottom: 2.225rem;
       }
 
       @media screen and (min-width: 992px) {
-        font-size: 3rem;
         margin-bottom: 2.875rem;
       }
     }
@@ -155,6 +186,12 @@ main {
     }
   }
 
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: center;
+  }
+
   @media screen and (min-width: 992px) {
     flex-direction: row;
     gap: 2.5rem;
@@ -164,39 +201,49 @@ main {
 
 .introduction-decoration-container {
   display: flex;
-  flex: 1;
   justify-content: flex-start;
   max-width: 540px;
+  align-self: center;
+  flex: 1;
+  gap: 1rem;
 
   .decoration-set {
-    flex: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     gap: 1rem;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .decoration-set:last-of-type {
+    align-items: flex-start;
   }
 
   .deco-1 {
-    width: 170px;
+    max-width: 170px;
 
     @media screen and (min-width: 992px) {
-      width: 270px;
+      max-width: 270px;
     }
   }
 
   .deco-2 {
-    width: 120px;
+    max-width: 120px;
 
     @media screen and (min-width: 992px) {
-      width: 195px;
+      max-width: 195px;
     }
   }
 
   .deco-3 {
-    width: 150px;
+    max-width: 150px;
 
     @media screen and (min-width: 992px) {
-      width: 240px;
+      max-width: 240px;
     }
   }
 
@@ -221,10 +268,17 @@ main {
 
   .example-images {
     justify-self: center;
-    width: 250px;
+    width: 200px;
     img {
       object-fit: cover;
-      height: 250px;
+      height: 200px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 250px;
+      img {
+        height: 250px;
+      }
     }
   }
 
