--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -1,21 +1,45 @@
 .breed-filter {
-  width: 120px;
-  border-radius: 60px;
-  font-size: 0.75rem;
+  font-size: 0.75rem !important;
   color: var(--almost-black);
   font-weight: 500;
-  padding: 0.4rem 0.875rem;
-  border: 1px solid var(--white);
+  height: 30px !important;
+  display: flex !important;
+  align-items: center !important;
 
-  @media screen and (min-width: 768px) {
-    width: 250px;
-    font-size: 1rem;
-    padding: 0.8rem 1.25rem;
+  .search-icon {
+    position: absolute;
+    color: black !important;
   }
 
-  @media screen and (min-width: 992px) {
-    font-size: 1.125rem;
-    padding: 1.2rem 1.75rem;
-    width: 300px;
+  .ant-select-selection-placeholder {
+    color: var(--almost-black) !important;
+    margin: auto 0rem;
+  }
+
+  .ant-select-selector {
+    height: 30px !important;
+
+    @media screen and (min-width: 768px) {
+      height: 40px !important;
+    }
+
+    @media screen and (min-width: 992px) {
+      height: 60px !important;
+    }
+  }
+
+  .ant-select-selector {
+    border-radius: 60px !important;
+    width: 120px !important;
+
+    @media screen and (min-width: 768px) {
+      width: 250px !important;
+      font-size: 1rem !important;
+    }
+
+    @media screen and (min-width: 992px) {
+      font-size: 1.125rem !important;
+      width: 300px !important;
+    }
   }
 }
