--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -21,13 +21,16 @@ footer {
   }
 
   .copyright {
-    font-size: 0.75rem;
     font-weight: 400;
     color: var(--white);
     display: flex;
     align-items: center;
     gap: 0.5rem;
 
+    p {
+      margin-bottom: 0;
+      font-size: 0.75rem;
+    }
     p:first-child {
       font-size: 1.5rem;
     }
